css/header.css
header {
  height: 6em;

  display: flex;
  align-items: center;
  justify-content: space-around;

  background-color: var(--main-bg-color-200);
}

/* Logo */
header .logo {
  font-size: 3rem;

  color: var(--primary-color-100);

  text-decoration: underline;
}

/* Navbar */

header nav {
  height: 100%;
  display: flex;
  flex-wrap: wrap;
}

header nav > ul,
header nav > ul li,
header nav ul li a {
  height: 100%;
}

/* Links */

header nav > ul {
  list-style: none;
  display: flex;
  gap: 2em;
}

header nav > ul li {
  text-decoration: none;

  position: relative;

  z-index: 1;

  overflow: hidden;
}

header nav > ul li a {
  text-decoration: none;
  color: var(--text-color-100);
  
  transition: color ease 130ms;

  display: flex;
  align-items: center;

  font-size: 1.5rem;
}

header nav > ul li::before {
  content: '';

  z-index: -1;

  position: absolute;

  background-color: var(--primary-color-100);

  width: 0;
  height: 100%;

  top: 96%;

  transition: width ease 230ms;
}

header nav > ul li a:hover {
  color: var(--text-color-200);
}

header nav > ul li:hover::before {
  width: 100%;
}

/* Menu Button - Close and Burger */

header .menu-btn {
  height: 40px;
  width: 40px;

  border: none;
  border-radius: 5px;
  background: var(--main-bg-color-300);

  transition: background ease 100ms;

  cursor: pointer;
}
header .menu-btn:hover {
  background: var(--main-bg-color-400)
}

header .menu-btn img {
  width: 100%;
  height: 100%;
}


header .menu-burger {
  display: none;
}
header .menu-close {
  display: none;
}

/* Media Query */

@media (max-width: 720px){
  header .menu-close {
    display: block;
  }

  header .menu-burger {
    display: block;
  }

  header > nav {
    position: absolute;

    width: 100%;
    height: 100%;

    background-color: var(--main-bg-color-200);

    display: flex;
    justify-content: space-between;

    padding: 10px;

    top: -100%;

    transition: top ease-in 300ms;
  }
  header > nav.open {
    top: 0;
  }

  header > nav ul {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  header > nav ul li a {
    padding: 10px;
    width: 100%;
  }

  header nav > ul li {
    width: 100%;
    height: auto;
  }
}

